[gd_scene load_steps=7 format=2]

[ext_resource path="res://main/SubMenuBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/audio/VolumeSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://main/audio/House In a Forest Loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://main/scripts/SettingsMenu.gd" type="Script" id=5]
[ext_resource path="res://player/powerups/audio/collect_powerup.wav" type="AudioStream" id=6]

[node name="SettingsMenu" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Background" parent="." index="0"]
position = Vector2( 0, -1.49835 )

[node name="MenuTitle" parent="." index="2"]
text = "Settings"

[node name="Music" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 4 )
bus = "Music"

[node name="SoundEffects" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 6 )
volume_db = -15.0
bus = "SoundEffects"

[node name="VBoxContainer" type="VBoxContainer" parent="." index="5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 200.0
margin_right = -100.0
margin_bottom = -200.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeLabel" type="Label" parent="VBoxContainer" index="0"]
margin_right = 1080.0
margin_bottom = 45.0
text = "Volume Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumesGrid" type="GridContainer" parent="VBoxContainer" index="1"]
margin_top = 65.0
margin_right = 1080.0
margin_bottom = 208.0
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/VolumesGrid" index="0"]
margin_right = 233.0
margin_bottom = 45.0
text = "Master"

[node name="MasterVolumeSlider" parent="VBoxContainer/VolumesGrid" index="1" instance=ExtResource( 2 )]
margin_left = 253.0
margin_right = 1080.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/VolumesGrid" index="2"]
margin_top = 49.0
margin_right = 233.0
margin_bottom = 94.0
text = "Music"

[node name="MusicVolumeSlider" parent="VBoxContainer/VolumesGrid" index="3" instance=ExtResource( 2 )]
margin_left = 253.0
margin_top = 49.0
margin_right = 1080.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 1
audio_bus_name = "Music"

[node name="EffectsVolumeLabel" type="Label" parent="VBoxContainer/VolumesGrid" index="4"]
margin_top = 98.0
margin_right = 233.0
margin_bottom = 143.0
text = "Sound Effects"

[node name="EffectsVolumeSlider" parent="VBoxContainer/VolumesGrid" index="5" instance=ExtResource( 2 )]
margin_left = 253.0
margin_top = 98.0
margin_right = 1080.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 1
audio_bus_name = "SoundEffects"

[node name="DisplayLabel" type="Label" parent="VBoxContainer" index="2"]
margin_top = 228.0
margin_right = 1080.0
margin_bottom = 273.0
text = "Display Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayGrid" type="GridContainer" parent="VBoxContainer" index="3"]
margin_top = 293.0
margin_right = 1080.0
margin_bottom = 387.0
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/DisplayGrid" index="0"]
margin_right = 176.0
margin_bottom = 45.0
text = "Fullscreen"

[node name="FullscreenButton" type="CheckButton" parent="VBoxContainer/DisplayGrid" index="1"]
margin_left = 196.0
margin_right = 246.0
margin_bottom = 45.0
size_flags_horizontal = 0
shortcut_in_tooltip = false
flat = true

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/DisplayGrid" index="2"]
margin_top = 49.0
margin_right = 176.0
margin_bottom = 94.0
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionButton" type="OptionButton" parent="VBoxContainer/DisplayGrid" index="3"]
margin_left = 196.0
margin_top = 49.0
margin_right = 1080.0
margin_bottom = 94.0
size_flags_horizontal = 7
shortcut_in_tooltip = false
text = "1280x720"
flat = true
align = 1

[connection signal="focus_entered" from="VBoxContainer/VolumesGrid/MasterVolumeSlider" to="." method="play_music"]
[connection signal="focus_exited" from="VBoxContainer/VolumesGrid/MasterVolumeSlider" to="." method="stop_music"]
[connection signal="mouse_entered" from="VBoxContainer/VolumesGrid/MasterVolumeSlider" to="." method="play_music"]
[connection signal="mouse_exited" from="VBoxContainer/VolumesGrid/MasterVolumeSlider" to="." method="stop_music"]
[connection signal="focus_entered" from="VBoxContainer/VolumesGrid/MusicVolumeSlider" to="." method="play_music"]
[connection signal="focus_exited" from="VBoxContainer/VolumesGrid/MusicVolumeSlider" to="." method="stop_music"]
[connection signal="mouse_entered" from="VBoxContainer/VolumesGrid/MusicVolumeSlider" to="." method="play_music"]
[connection signal="mouse_exited" from="VBoxContainer/VolumesGrid/MusicVolumeSlider" to="." method="stop_music"]
[connection signal="focus_entered" from="VBoxContainer/VolumesGrid/EffectsVolumeSlider" to="." method="play_sounds"]
[connection signal="focus_exited" from="VBoxContainer/VolumesGrid/EffectsVolumeSlider" to="." method="stop_sounds"]
[connection signal="mouse_entered" from="VBoxContainer/VolumesGrid/EffectsVolumeSlider" to="." method="play_sounds"]
[connection signal="mouse_exited" from="VBoxContainer/VolumesGrid/EffectsVolumeSlider" to="." method="stop_sounds"]
[connection signal="toggled" from="VBoxContainer/DisplayGrid/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="item_selected" from="VBoxContainer/DisplayGrid/ResolutionButton" to="." method="_on_ResolutionButton_item_selected"]
